fix label overflow

--- a/src/Styles/barcharthtml.less
+++ b/src/Styles/barcharthtml.less
@@ -27,6 +27,7 @@
         position: relative;
         color: #333;
         text-align: right;
+        overflow: hidden;
       }
     }
     .tick {
